# scripting-js-lib

./: CMakeLists.txt
src/scripting-js/services/: ScriptingJSSystemsService.cppm
src/scripting-js/systems/: ScriptingJSSystems.cpp  ScriptingJSSystems.cppm
